...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notes" translatesAutoresizingMaskIntoConstraints="NO" id="7P0-Rc-Qvv">
                                                        <rect key="frame" x="34.666666666666679" y="35" width="85.333333333333314" height="85.333333333333314"/>
                                                        <constraints>
...
                        <outlet property="description3" destination="pfb-R1-oUo" id="Fvw-Lb-GDE"/>
                        <outlet property="description4" destination="B4V-uN-HTr" id="HN4-D8-zuw"/>
                        <outlet property="dueBtn" destination="PUt-4V-26Z" id="6Bo-bT-gzm"/>
                        <outlet property="dueImg" destination="Rnc-cr-Lk7" id="fzn-Fp-6i6"/>
                        <outlet property="expBtn" destination="bPK-Mh-ZYQ" id="BW1-AL-jCv"/>
                        <outlet property="expImg" destination="8sz-1O-407" id="TRM-Si-Ikx"/>
                        <outlet property="goldBtn" destination="wRB-uM-Ulh" id="Ip9-lC-QKW"/>
                        <outlet property="goldImg" destination="S26-Y3-im5" id="lTc-A7-s1g"/>
                        <outlet property="notesBtn" destination="AcN-Xp-ELc" id="08q-IQ-MLR"/>
                        <outlet property="notesImg" destination="7P0-Rc-Qvv" id="Moa-Mw-CKY"/>
                        <outlet property="placeholder1" destination="GRZ-6h-eDh" id="xqS-jX-TF4"/>
...
                                <rect key="frame" x="51.666666666666657" y="110.33333333333331" width="310.66666666666663" height="515.33333333333326"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4VN-Hb-rSW" userLabel="Save">
                                        <rect key="frame" x="256.66666666666663" y="470.33333333333331" width="34" height="40"/>
                                        <constraints>
...
                                            <constraint firstAttribute="height" constant="40" id="uc8-jg-idX"/>
                                        </constraints>
                                        <state key="normal" title="Cancel"/>
                                        <connections>
                                            <action selector="cancel:" destination="f95-Ig-vA0" eventType="touchUpInside" id="c5j-Wn-6Hd"/>
...
            <objects>
                <navigationController storyboardIdentifier="NavCon1" title="Quests" automaticallyAdjustsScrollViewInsets="NO" id="SwD-t9-40C" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Quest" image="checklist" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u8r-4J-vnP">
...
                    </view>
                    <navigationItem key="navigationItem" id="Hhy-XK-ZRI">
                        <barButtonItem key="leftBarButtonItem" title="Login" id="ot1-Si-8dz">
                            <connections>
                                <action selector="loginAndSignUpWithSender:" destination="5ea-es-uA5" id="A7Z-K2-nv2"/>
...
        <scene sceneID="p1s-tj-l90">
            <objects>
                <navigationController storyboardIdentifier="NavCon3" title="Rewards" automaticallyAdjustsScrollViewInsets="NO" id="Sxa-5c-PIU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Rewards" image="rewards" id="PW1-gp-M9O"/>
                    <toolbarItems/>
...
        <scene sceneID="Zdt-TM-OQU">
            <objects>
                <navigationController storyboardIdentifier="NavCon4" title="Hero" automaticallyAdjustsScrollViewInsets="NO" id="AqH-kX-qPR" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Hero" image="hero" id="fHh-9E-EH4"/>
                    <toolbarItems/>
...
                        <outlet property="popupSlider" destination="hRm-fd-nLB" id="BuT-po-ybt"/>
                        <outlet property="saveBtn" destination="BGi-fI-Z3i" id="R9r-G8-R8Q"/>
                        <outlet property="sliderDiff" destination="k7k-7M-ym4" id="RJA-N5-cfX"/>
                        <outlet property="sliderImp" destination="XIp-2b-KOQ" id="tGM-LI-rWS"/>
                        <outlet property="titleLbl" destination="tpQ-9h-RVX" id="4BG-tf-fff"/>
                        <outlet property="totalExp" destination="hBu-g7-ZTb" id="ISd-3Z-p9Q"/>
...
