...
    override func viewDidLoad() {
        super.viewDidLoad()
        dbRef = Database.database().reference().child(varPassed.uid)
        startObservingDB()
        // Register the table view cell class and its reuse id
//        self.taskView.register(UITableViewCell.self, forCellReuseIdentifier: cellReuseIdentifier)
        taskView.accessibilityIdentifier = "TasksTable"
        // This view controller itself will provide the delegate methods and row data for the table view.
        taskView.delegate = self
        taskView.dataSource = self
        self.title = cellChosen
    }
    
...
        let view = subview2.subviews.first! as UIView
        view.backgroundColor = Model.get.mainColours[indexChosen.mainColour]
        view.tintColor = Model.get.textColours[indexChosen.mainColour]
        taskAlert.view.tintColor = Model.get.textColours[indexChosen.mainColour]
        
        taskAlert.addTextField { (textField:UITextField) in
            textField.placeholder = "New task name"
        }
        taskAlert.addAction(UIAlertAction(title: "Add", style: .default, handler: { (action:UIAlertAction) in
            if let taskContent = taskAlert.textFields?.first?.text {
                let task = String(taskContent)
                let ref = self.dbRef.child("task").child(taskContent)
                let taskRef = ref.child("name")
...
